# PI_Calculator

./: .gitignore  CMakeLists.txt  Pi - 20260201-170920.txt  README.md  binary_split.h  check_gmp.cpp  compute_pi.h  main.cpp  main.h  pqt.h
.cache/clangd/index/: base_conv.cpp.A4D0C76D74049E6E.idx  base_conv.hpp.1E1058630C34A2E5.idx  bigint.cpp.557F83946BB76EE5.idx  bigint.hpp.0EAD121F75B97E37.idx  chudnovsky.cpp.7985C78E03451AEE.idx  main.cpp.1808A4562BBE3841.idx  ntt.cpp.787E253A11334A49.idx  ntt.hpp.64EEDEE5E4747542.idx  timer.hpp.7567ABF1FADE3A49.idx
Pi_Calc/: Pi_Calc.sln
Pi_Calc/Cli/: Cli.cpp  Cli.vcxproj  Cli.vcxproj.filters
Pi_Calc/Core/: Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  binary_split.h  core_api.h  pi_computation.cpp  pqt.h
Pi_Calc/GPU/: GPU.vcxproj  gpu_multiplier.cu  gpu_multiplier.h
include/: base_conv.hpp  bigint.hpp  ntt.hpp  timer.hpp  validator.hpp
src/: base_conv.cpp  bigint.cpp  binary_split.h  chudnovsky.cpp  compute_pi.h  main.cpp  ntt.cpp  validator.cpp
src_manual/: bigint.cpp  bigint.hpp  chudnovsky.cpp  main.cpp  timer.hpp
